k.erushnikov/vaultwarden/overlays/sber/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      nodeSelector:
        k3s.io/hostname: k.erushnikov.ru
      containers:
        - name: vaultwarden
          image: vaultwarden/server:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vaultwarden-data
        - name: backup
          hostPath:
            path: /PVC/vaultwarden   # ✅ directory, not file
            type: Directory
